# dm_OCPS

./: .gitignore  COPYRIGHT  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yaml
conda/: meta.yaml
doc/: conf.py  developer-guide.rst  index.rst  manifest.yaml  version_history.rst
python/lsst/dm/OCPS/: __init__.py  ocps_csc.py
tests/: test_csc.py
tests/data/config/: _init.yaml  _labels.yaml  all_fields.yaml  base.yaml  invalid_butler.yaml  invalid_instance.yaml  invalid_interval.yaml  invalid_output_glob.yaml  invalid_url.yaml  ncsa.yaml
ups/: dm_OCPS.table
