[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[tool:pytest]
addopts = --black --flake8 --mypy --ignore-glob=*/version.py --async-mode=strict
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503

[metadata]
version = attr: setuptools_scm.get_version
